Removed unnecessary config